# agentic-bi

./: .gitignore
puredata/: README.md  pyproject.toml
puredata/Datafiles/: linktocsv.txt
puredata/clickhouse-config/users.d/: puredata_app.xml
puredata/src/puredata/: crew.py  main.py  tasks.py
puredata/src/puredata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
puredata/src/puredata/config/: agents.py
puredata/src/puredata/database/: clickhouse_read.py  dynamic_sql.py
puredata/src/puredata/tools/: data_analysis_tool.py  dataloader_tool.py
