[project]
name = "puredata"
version = "0.1.0"
description = "PureData using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1"
]

[project.scripts]
puredata = "puredata.main:run"
run_crew = "puredata.main:run"
train = "puredata.main:train"
replay = "puredata.main:replay"
test = "puredata.main:test"
run_with_trigger = "puredata.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
